@@ -36,7 +36,7 @@
 					<TD width="1%" nowrap>
 						<B>{t}Customer:{/t}</B>
 					</TD>
-					<TD width="95%" colspan="2" nowrap>
+					<TD width="1%" colspan="2" nowrap>
 						{if $customers}
 						<SELECT size="1" name="customer" {tip text="You can select customer to limit results"}>
 							<OPTION value="0">{t}- all customers -{/t}</OPTION>
@@ -48,6 +48,15 @@
 						<INPUT type="text" name="customer" value="" size="5" {tip text="Enter customer ID or leave empty for all customers"}>
 						<a href="javascript: void(0);" onclick="return customerchoosewin(document.ticketslist.customer);" {tip text="Click to search customer"}>{t}Search{/t}&nbsp;&raquo;&raquo;&raquo;</A>
 						{/if}
+					</TD>
+					<TD width="1%" nowrap>
+						<IMG src="img/ticket.gif" alt="">
+					</TD>
+					<TD width="1%" nowrap>
+						<B>{t}Subject:{/t}</B>
+					</TD>
+					<TD width="92%" nowrap>
+						<INPUT type="text" name="subject" value="" size="30" {tip text="Enter subject"}>
 					</TD>
 				</TR>
 				<TR>
@@ -75,8 +84,8 @@
 					<TD width="1%" nowrap>
 						<INPUT TYPE="text" NAME="days" SIZE="3"> {t}days{/t}
 					</TD>
-					<TD width="94%"nowrap>
-						<INPUT TYPE="checkbox" CLASS="box light" NAME="extended" VALUE="1" CHECKED>{t}include contact info{/t}
+					<TD width="10%" nowrap>
+						<INPUT TYPE="checkbox" CLASS="box light" NAME="extended" VALUE="1" CHECKED><A HREF="javascript:checkElement('extended')">{t}include contact info{/t}</A>
 					</TD>
 				</TR>
 			</TABLE>
