@@ -36,6 +36,7 @@ version ? (????-??-??):
   - performance: optimized LMS::GetCustomer calls using its 2nd argument (alec)
   - reload: we can see live output from reload script (Grzegorz Cichowski)
   - divisions: added ten and regon attributes (chilan)
+  - rtprint: subject field added (chilan)
 
 version 1.11.4 Telchak (2008-08-07):
 
